<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, Main!</string>
    <string name="app_name_http_get">http_get</string>
    <string name="app_name">GeoRed.uy</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">GeoRed.uy</string>
    <string name="registrar">Registrar</string>
    <string name="login">Login</string>
    <string name="check_in">Check in sitio de interes</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="facebook">Facebook</string>
    <string name="logout">Logout</string>
    <string name="instructions">Instructions</string>
    <string name="email">E-Mail</string>
    <string name="enterPassword">Ingresar Password</string>
    <string name="enterPasswordAgain">Ingresar Password nuevamente</string>
    <string name="HttpGETDemo">Http GET Demo</string>
    <string name="GET">Http GET Demo</string>
    <string name="rest_test">Test Servicios</string>
    <string name="activity_sample_code">Maps API Demos</string>
    <string name="location_test">Maps API Demos</string>
    <string name="edicionUsuario">Edicion de Usuario</string>
    <string name="Contactos">Chat</string>
    <string name="Contacto">Contacto</string>
    <string name="Invitaciones">Invitaciones</string>
    <string name="InvitarContacto">Invitar Contacto</string>
    <string name="AceptarInvitacion">Aceptar Invitacion</string>
    <string name="ModificarUsuario">Modificar Usuario</string>
    <string name="iniciar_chat">Iniciar Chat</string>
    <string name="invitar_contacto">Invitar Contacto</string>
    <string name="aceptar_invitacion">Aceptar invitacion</string>
    <string name="rechazar_invitacion">Rechazar invitacion</string>
    <string name="sitioDInteres">Sitios de Interes</string>
    <string name="notificacionesLocal">Noticias Locales</string>
    <string name="BuscarContactos">Buscar Contactos</string>
    <string name="ofertas">Ofertas</string>
    <string name="rest_ofertas">rest_ofertas</string>
    <string name="sacar_foto">Sacar Foto</string>
    <string name="comprar">Comprar y Valorar</string>
    <string name="comentar">Comentar</string>
    <string name="valorar">Valorar</string>
    <string name="notificacionesLocales">Locales y Ofertas</string>
    <string name="notificacionesEventos">Eventos</string>
    <string name="invitarAmigo">Invita a un amigo a Geored-uy.Invita a un amigo a Geored-uy.</string>

</resources>