<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_registrar"
        android:title="@string/registrar"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/menu_login"
        android:title="@string/login"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/menu_check_in"
        android:title="@string/check_in"
        android:orderInCategory="100"
        android:showAsAction="never" 
        />
    <item android:id="@+id/menu_notificaciones"
        android:title="@string/notificaciones"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/menu_facebook"
        android:title="@string/facebook"
        android:orderInCategory="100"
        android:showAsAction="never" />

</menu>
