<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="138dp"
        android:layout_weight="5.04"
        android:src="@drawable/android" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textComentar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comentar"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/valorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textValorar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5.04"
            android:text="@string/valorar"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/comentarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4.06"
            android:ems="10"
            android:inputType="number" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/idButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showNotificaciones"
        android:text="@string/comprar" />

</LinearLayout>